K1J-1925: Apply Spotless code formatting